fix: Rename to response_delay_in_milliseconds
